# robo_trace

./: .pre-commit-config.yaml  LICENSE  LicenseHeader.tmpl  README.md
robo_trace/: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
robo_trace/cfg/: cfg_exp_a.yaml  cfg_exp_b.yaml  example_cfg.yaml  trace_tiago.yaml
robo_trace/cmake/: FindMongoDB.cmake
robo_trace/include/robo_trace/: config.h.in  parameters.hpp  robo_trace_nodelet.hpp
robo_trace/include/robo_trace/modes/: modes.hpp
robo_trace/include/robo_trace/processing/: constructor.hpp  context.hpp  descriptor.hpp  mode.hpp  plugin.hpp  processor.hpp  target.hpp  variant.hpp
robo_trace/include/robo_trace/storage/: connector.hpp  container.hpp  options.hpp  persistor.hpp  query.hpp  result.hpp  stream.hpp
robo_trace/include/robo_trace/util/: align.hpp  options.hpp  smart_ptr_conversions.hpp  topic.hpp  ts_queue.hpp  wrapped_bson.hpp
robo_trace/launch/: exb_b.launch  params.launch
robo_trace/src/: robo_trace_node.cpp  robo_trace_nodelet.cpp
robo_trace/src/modes/capture/: options.cpp  persistor.cpp  record.cpp  recorder.cpp
robo_trace/src/modes/replay/: loader.cpp  options.cpp  play.cpp  player.cpp  publisher.cpp  time.cpp  util.cpp
robo_trace/src/modes/replay/cli/: play.cpp  (+1 more)
robo_trace/src/processing/: constructor.cpp  context.cpp  descriptor.cpp  plugin.cpp  processor.cpp  variant.cpp
robo_trace/src/processing/pipeline/: constructor.cpp  descriptor.cpp
robo_trace/src/processing/plugin/: plugin.cpp
robo_trace/src/processing/stage/: descriptor.cpp  stage.cpp
robo_trace/src/processing/translation/: options.cpp  translator.cpp
robo_trace/src/storage/: connector.cpp  container.cpp  options.cpp  persistor.cpp  query.cpp  result.cpp  stream.cpp
robo_trace/src/storage/persistors/: basic.cpp  batch.cpp  direct.cpp  util.cpp
robo_trace/src/util/: options.cpp  topic.cpp  wrapped_bson.cpp
robo_trace_core/: CMakeLists.txt  nodelet_plugins.xml  package.xml
robo_trace_core/cfg/: example_cfg.yaml
robo_trace_core/include/robo_trace_core/: config.h.in  definitions.hpp  orchestrator.hpp  robo_trace_nodelet.hpp
robo_trace_core/include/robo_trace_core/persistance/: bson_backed_lazy_metadata_container.hpp  connection.hpp  store.hpp
robo_trace_core/include/robo_trace_core/processing/: lazy_message.hpp  performance_measureing_stage_delegate.hpp
robo_trace_core/include/robo_trace_core/utils/: smart_ptr_conversions.hpp  topic.hpp  wrapped_bson.hpp
robo_trace_core/launch/: test.launch
robo_trace_core/src/: orchestrator.cpp  robo_trace_node.cpp  robo_trace_nodelet.cpp
robo_trace_core/src/persistance/: bson_backed_lazy_metadata_container.cpp  connection.cpp  store.cpp
robo_trace_core/src/processing/: lazy_message.cpp  performance_measuring_stage_delegate.cpp
robo_trace_core/src/processing/forward/: constructor.cpp  descriptor.cpp  pipeline.cpp
robo_trace_core/src/processing/invocation/: blocking.cpp  chaining_invoker.cpp  sequential.cpp  single_stage_invoker.cpp
robo_trace_core/src/processing/marshalling/: descriptor.cpp  serializer.cpp
robo_trace_core/src/utils/: topic.cpp  wrapped_bson.cpp
robo_trace_evaluation/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
robo_trace_evaluation/scripts/: dump_arrival_times.py
robo_trace_evaluation/src/: export.py  loader.py  parameters.py  plotting.py  runner.py  utilization.py
robo_trace_evaluation/src/experiments/a/: evaluate.py  execute.py
robo_trace_evaluation/src/experiments/b/: evaluate.py  execute.py
robo_trace_evaluation/src/experiments/c/: evaluate.py  execute.py
robo_trace_msgs/: CMakeLists.txt  package.xml
robo_trace_msgs/srv/: SetConfiguration.srv
robo_trace_openssl_plugin/: CMakeLists.txt  package.xml  plugins.xml
robo_trace_openssl_plugin/cfg/: example_cfg.yaml
robo_trace_openssl_plugin/include/robo_trace_openssl_plugin/: definitions.hpp  key_manager.hpp  parameters.hpp  robo_trace_openssl_plugin.hpp
robo_trace_openssl_plugin/include/robo_trace_openssl_plugin/chain/: configuration.hpp  descriptor.hpp  forward.hpp  validate.hpp
robo_trace_openssl_plugin/include/robo_trace_openssl_plugin/signature/: configuration.hpp  descriptor.hpp  forward.hpp
robo_trace_openssl_plugin/include/robo_trace_openssl_plugin/util/: zallocator.hpp
robo_trace_openssl_plugin/src/: key_manager.cpp  robo_trace_openssl_plugin.cpp
robo_trace_openssl_plugin/src/chain/: configuration.cpp  descriptor.cpp  forward.cpp  validate.cpp
robo_trace_openssl_plugin/src/signature/: configuration.cpp  descriptor.cpp  forward.cpp
robo_trace_openssl_plugins/: CMakeLists.txt  package.xml  plugins.xml
robo_trace_openssl_plugins/include/robo_trace_openssl_plugins/: definitions.hpp  key_manager.hpp  robo_trace_openssl_plugins.hpp
robo_trace_openssl_plugins/src/: key_manager.cpp  robo_trace_openssl_plugins.cpp
robo_trace_openssl_plugins/src/chain/: configuration.cpp  descriptor.cpp  forward.cpp  validate.cpp
robo_trace_openssl_plugins/src/signature/: configuration.cpp  descriptor.cpp  forward.cpp
robo_trace_plugin_interface/: CMakeLists.txt  package.xml
robo_trace_plugin_interface/cmake/: FindMongoDB.cmake
robo_trace_plugin_interface/include/robo_trace_plugin_interface/: config.h.in  definitions.hpp  plugin.hpp
robo_trace_plugin_interface/src/: plugin.cpp
robo_trace_plugin_interface/src/processing/: context.cpp  descriptor.cpp  message.cpp  stage.cpp
robo_trace_ui/: CMakeLists.txt  package.xml  plugin_description.xml
robo_trace_ui/config/rviz/: default.rviz
robo_trace_ui/include/robo_trace_ui/: robo_trace_ui_display.hpp
robo_trace_ui/media/: UiOverlay.qml  UiOverlay.qmlc
robo_trace_ui/src/: robo_trace_ui_display.cpp
robo_trace_ui_adaptor/: CMakeLists.txt  package.xml
robo_trace_ui_adaptor/include/robo_trace_ui_adaptor/: ui_adaptor.hpp
robo_trace_ui_adaptor/msg/: PlaybackMeta.msg  PlaybackProgression.msg
robo_trace_ui_adaptor/src/: robo_trace_ui_adaptor_node.cpp  ui_adaptor.cpp
robo_trace_ui_adaptor/srv/: SetPlaybackConfiguration.srv  SetPlaybackState.srv  SetPlaybackTime.srv
(+133 files in other folders)
