<?xml version="1.0"?>
<package format="2">

  <name>robo_trace_openssl_plugin</name>
  <description>A data recorder featuring privacy, integrity and authenticity.</description>

  <version>0.0.0</version>
  <license>TODO</license>

  <maintainer email="max.schmidt.11@stud.tu-darmstadt.de">Max Schmidt</maintainer>
  <author email="max.schmidt.11@stud.tu-darmstadt.de">Max Schmidt</author>

  <!-- <url type="website">http://wiki.ros.org/black_box_recorder</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robo_trace</depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>ros_babel_fish</depend>
  
  <export> 
    <robo_trace plugin="${prefix}/plugins.xml"/>
  </export>
  
</package>
